T-7754 styles_totara.css: Wrapping of breadcrumb IE6 fix, updated theme config.
Reviewed-on: https://review.totaralms.com/589
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/totara/styles_ie6.css
+++ b/theme/totara/styles_ie6.css
@@ -25,6 +25,9 @@ div#totara_menu ul {
 .header-search{
     margin-right:0px;
 }
+.navbar .breadcrumb{
+    padding-left:0px;
+}
 
 /**
  * Element default fixes
